# t-shape-visualization

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/: t_shape.numbers  t_shape_content.csv  t_shape_shape.csv
rsconnect-python/: t-shape.json
src/: __init__.py  app.py  data_loader.py  visualizations.py
