[project]
name = "t-shape-visualisation"
version = "0.2.0"
description = "Interactive T-shape skills visualisation with reactive filtering and modern UI"
authors = [
    {name = "Fleur Petit", email = "fleur.petit@alliander.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "shiny>=0.6.0",
    "numpy>=1.24.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "plotnine>=0.13.6",
    "rsconnect-python>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
